# nu_ridgeback

./: CMakeLists.txt  README.md  nuridgeback.rosinstall  package.xml  ridgebackws.rosinstall
config/bumblebee/: left.yaml
launch/: accessories.launch  base.launch  bumblebee.launch
meshes/: bb2_stereo_cam.dae
nu_ridgeback_description/: CMakeLists.txt  package.xml
nu_ridgeback_description/config/: nu_ridgeback.rviz
nu_ridgeback_description/config/bumblebee/: right.yaml
nu_ridgeback_description/launch/: VLP16_points.launch  bumblebee.launch
nu_ridgeback_description/urdf/: bumblebee_camera.urdf.xacro  controller_enclosure.urdf.xacro  nu_ridgeback.urdf.xacro  sawback.urdf.xacro  velodyne.urdf.xacro
nuridgeback_bringup/: CMakeLists.txt  README.md  package.xml
nuridgeback_bringup/networking/: interfaces
nuridgeback_bringup/scripts/: env.sh  nuridgeback_startup
nuridgeback_bringup/service/: ridgeback.service
nuridgeback_bringup/startup/: nuridgeback_startup
nuridgeback_bringup/udev/: 60-pgr.rules
nuridgeback_description/: CMakeLists.txt  README.md  package.xml
nuridgeback_description/config/: nuridgeback.rviz
nuridgeback_description/launch/: view_ridgeback.launch
nuridgeback_description/meshes/: vlp16_assy.stl
nuridgeback_description/urdf/: box.urdf.xacro  bumblebee_camera.urdf.xacro  nuridgeback.urdf.xacro  sawyer_mount.urdf.xacro  velodyne.urdf.xacro
nuridgeback_gazebo/: CMakeLists.txt  README.md  package.xml
nuridgeback_gazebo/config/: nuridgeback_gazebo.rviz
nuridgeback_gazebo/launch/: nuridgeback_sim.launch  nuridgeback_world.launch
nuridgeback_gazebo/worlds/: maze1.world
nuridgeback_robot/: CMakeLists.txt  README.md  package.xml
nuridgeback_robot/config/: explore.rviz  navigation.rviz  rtabmap_params.ini  slam.rviz
nuridgeback_robot/config/bumblebee/: 19363403.yaml  left.yaml  right.yaml
nuridgeback_robot/config/exploration/: explore.yaml  explore_mi.yaml  information.yaml
nuridgeback_robot/config/imu/: mag_config.yaml
nuridgeback_robot/config/navigation/costmap/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
nuridgeback_robot/config/navigation/planner/: base_local_planner_params.yaml
nuridgeback_robot/env-hooks/: env_setup  env_setup.sh.in
nuridgeback_robot/launch/: accessories.launch  base.launch  basic_autonomy.launch  basic_remote.launch  bb2_rtabmap.launch  bumblebee.launch  exploration.launch  laser_slam.launch  move_base.launch  navigation.launch  rtabmap_slam.launch  stereo_mapping.launch  stereo_slam.launch  test_merger.launch  test_remote.launch  test_velodyne.launch  velodyne.launch  visual_slam.launch  visualization.launch
nuridgeback_robot/scripts/: start.bash
nuridgeback_robot/src/: assemble_scans_node.cpp
urdf/: nwu03_ridgeback_extras.urdf.xacro
