<?xml version="1.0"?>
<package>
  <name>nuridgeback_description</name>
  <version>0.0.1</version>
  <description>Robot description for NU Ridgeback</description>
  <maintainer email="bostoncleek2020@u.northwestern.edu">bostoncleek</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
