<?xml version="1.0"?>
<package format="2">
  <name>nuridgeback_gazebo</name>
  <version>0.0.1</version>
  <description>Simulate NU ridgeback in gazebo</description>
  <maintainer email="bostoncleek2020@u.northwestern.edu">bostoncleek</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>nuridgeback_description</exec_depend>
  <exec_depend>ridgeback_control </exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
