<?xml version="1.0"?>
<package format="2">
  <name>nuridgeback_robot</name>
  <version>0.0.1</version>
  <description>NU Ridgeback</description>
  <maintainer email="bostoncleek2020@u.northwestern.edu">bostoncleek</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ergodic_exploration</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>nuridgeback_description</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>ridgeback_base</exec_depend>
  <exec_depend>ridgeback_control </exec_depend>
  <exec_depend>range_mi</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sawback_description</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>teleop_twist_joy </exec_depend>
  <exec_depend>urg_node</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
